# payscales

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  anniversary_query.graphql  group_query.graphql  group_query.rs  group_schema.graphql  tmp.csv
data/: ac.json  ad.json  ag.json  ai.json  ao.json  ar.json  as.json  at.json  au.json  bi.json  ch.json  cm.json  co.json  cr.json  cs.json  cx.json  da.json  dd.json  de.json  ds.json  ec.json  eg.json  el.json  en.json  error_groups_data.json  eu.json  fb.json  fi.json  fo.json  fr.json  fs.json  gl.json  groups_data.json  gs.json  gt.json  hn.json  hp.json  hr.json  hs.json  irr_ad.json  (+76 more)
migrations/2020-05-08-203727_add_users/: up.sql
src/: graphql_schema.rs  main.rs  upload.rs  utilities.rs
src/handlers/: graphql_handlers.rs  handlers.rs  mod.rs  upload_handler.rs
src/models/: active_rate_of_pay.rs  enums.rs  group.rs  groups.rs  increment.rs  mod.rs  pay_period.rs  payscale.rs  rate_of_pay.rs  users.rs
templates/: base.html  index.html
