[package]
name = "payscales"
version = "0.2.3"
authors = ["toferc <cgeist7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-rt = "1.0"
actix-multipart = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"]}
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
reqwest = { version = "0.10.6", features = ["json"] }
juniper = "0.14.2"
env_logger = "0.7.1"
bdays = "0.1.1"
csv = "1.1.3"
bytes = "0.5.4"
graphql_client = "0.9.0"
actix-files = "0.2.2"
tera = "1.3.0"
calamine = "0.16.1"
